[package]
name = "abs"
version = "0.1.0"
authors = ["originbenntou <originbenntou8973@gmail.com>"]
edition = "2018"

# dependencies added to new project
[dependencies]
proconio = "0.4.1"

[profile.release]
lto = true
panic = 'abort'

[[bin]]
name = "abc049c"
path = "src/bin/abc049c.rs"

[[bin]]
name = "abc081a"
path = "src/bin/abc081a.rs"
